Page MenuHome GnuPG

libgcrypt,w32: Possible API change for include file(s)
Closed, ResolvedPublic

Description

In rC71d4d592d891: build,gcrypt.h: Don't define gcry_socklen_t., I removed FALLBACK_SOCKLEN_T for T5637 which removes dependency to select.

This is good to minimize dependency for libgcrypt use.

But existing applications with libgcrypt might depend on the fact that libgcrypt includes winsock2.h.